Fixat tabell i effekter och en bugg med ett komma

--- a/body.tex
+++ b/body.tex
@@ -257,13 +257,13 @@ Nödtrafik har alltid prioritet.
 Effekter anges i W eller i decibel relaterat till 1 mW (dBm) eller relaterat 1W (dBW). Tabell över effekt och decibelwatt nedan:
 \begin{table}[h]
 \begin{tabular}{rrr|rrr|rrr}
-	   \textbf{Effekt} & \textbf{dBW} & \textbf{dBm} & \textbf{Effekt} & \textbf{dBW} & \textbf{dBm} & \textbf{Effekt} & \textbf{dBW} & \textbf{dBm} \\ \hline
-	  1 \textmu W &          -60 &          -30 &        1 W &            0 &           30 &      100 W &           20 &           50 \\
-	 10 \textmu W &          -50 &          -20 &        3 W &            5 &           35 &      250 W &           24 &           54 \\
-	100 \textmu W &          -40 &          -10 &        5 W &            7 &           37 &      500 W &           27 &           57 \\
-	         1 mW &          -30 &            0 &       10 W &           10 &           40 &       1 kW &           30 &           60 \\
-	        10 mW &          -20 &           10 &       20 W &           13 &           43 &     1.5 kW &           32 &           62 \\
-	       100 mW &          -10 &           20 &       50 W &           17 &           47 &     2.0 kW &           33 &           63
+	\textbf{Effekt} & \textbf{dBW} & \textbf{dBm} & \textbf{Effekt} & \textbf{dBW} & \textbf{dBm} & \textbf{Effekt} & \textbf{dBW} & \textbf{dBm} \\ \hline
+	    1 \textmu W &          -60 &          -30 &             1 W &            0 &           30 &           100 W &           20 &           50 \\
+	   10 \textmu W &          -50 &          -20 &             3 W &            5 &           35 &           250 W &           24 &           54 \\
+	  100 \textmu W &          -40 &          -10 &             5 W &            7 &           37 &           500 W &           27 &           57 \\
+	           1 mW &          -30 &            0 &            10 W &           10 &           40 &            1 kW &           30 &           60 \\
+	          10 mW &          -20 &           10 &            20 W &           13 &           43 &          1.5 kW &           32 &           62 \\
+	         100 mW &          -10 &           20 &            50 W &           17 &           47 &          2.0 kW &           33 &           63
 \end{tabular}
 \caption{Tabell över effekt och decibelskalor}
 \end{table}
@@ -312,7 +312,7 @@ Olika modulationer upptar olika bandbredd. Detta är mycket viktigt att förstå
 	WFM                 &          16-75 kHz & Bredbandig FM (t.ex. rundradio)
 \end{tabular}
 
-*) För SSB gäller att USB och LSB fungerar lite olika. När man beräknar den högsta eller lägsta frekvensen utgår man från den inställda frekvensen $f$. För USB gäller då att högsta frekvensen är $f+3$\,kHz. För LSB blir det $f-3$\,kHz. Detta innebär att om du sänder på 80\,m-bandet och du får sända telefoni från 3600--3800\,kHz och vill lägga dig i under bandkanten och köra LSB skall du ställa in din radio på 3603\,kHz som lägsta frekvens. Använd gärna lite marginal och kör exempelvis 3605,kHz i stället.
+*) För SSB gäller att USB och LSB fungerar lite olika. När man beräknar den högsta eller lägsta frekvensen utgår man från den inställda frekvensen $f$. För USB gäller då att högsta frekvensen är $f+3$\,kHz. För LSB blir det $f-3$\,kHz. Detta innebär att om du sänder på 80\,m-bandet och du får sända telefoni från 3600--3800\,kHz och vill lägga dig i under bandkanten och köra LSB skall du ställa in din radio på 3603\,kHz som lägsta frekvens. Använd gärna lite marginal och kör exempelvis 3605\,kHz i stället.
 
 Det är vanligt att man märker stationer som kör överdriven bandbredd. Antingen som en följd av att man vill öka sin modulationsvinst, okunskap eller man har skruvat i sin radio. Syftet kan var att få bättre genomslag vid långväga förbindelser.
 
