--- a/body.tex
+++ b/body.tex
@@ -5,7 +5,9 @@ Här är inte alla länder med utan de vanligaste som körs från Sverige.
 
 \begin{center}
 \begin{longtable}{cl|cl}
+	   	\caption{Tabell över landsprefix}\\
 	   \textbf{Signal} & \textbf{Land}        & \textbf{Signal} & \textbf{Land}         \\ \hline
+	   \endfirsthead
 	\endhead
               AMA--AOZ     & Spanien              & C3A--C3Z        & Andorra               \\
 	      C4A--C4Z     & Cypern               & DAA--DRZ        & Tyskland              \\
@@ -79,7 +81,8 @@ Som suffix används följande:
 
 Sverige delas in i följande distrikt efter sina län:
 
-\begin{center}
+\begin{table}[h]
+	\centering
 \begin{tabular}{cl}
 	\textbf{Distrikt} & \textbf{Län}                                     \\ \hline %\endhead
 	      0        & Stockholm                                        \\
@@ -92,7 +95,8 @@ Sverige delas in i följande distrikt efter sina län:
 	      7        & Skåne, Blekinge, Kronoberg, Jönköping, Kalmar    \\
 	      8        & Speciella stationer utanför landets gränser
 \end{tabular}
-\end{center}
+\caption{Distriktssiffor i Sverige}
+\end{table}
 Distrikten förekommen som siffra i utdelade anropssignaler. Radioamatörer byter inte distriktsiffra under resa i annat distrikt, i stället används suffix (tillägg efter ordinarie signal) som t.ex. /M för mobil. Ofta uppger man "SM0UEI mobilt i SM3-land" för att påvisa att man befinner sig utanför ordinarie distrikt.
 
 I de tidigare SMnXYZ-signalerna förekom amatörens bokstavskombination endast en gång, det kunde alltså inte finnas en SM4UEI och en SM0UEI, det vore i så fall samma amatör som flyttat. Med det nya systemet där SSA m.fl. utdelar signaler i stället för PTS i serien SAnXYZ kan SM4XYZ och SA7XYZ alltså vara två helt olika amatörer.
@@ -100,7 +104,8 @@ I de tidigare SMnXYZ-signalerna förekom amatörens bokstavskombination endast e
 
 \subsection{Bokstaveringsalfabetet (Svenska)}
 
-\begin{center}
+\begin{table}[H]
+	\centering
 \begin{longtable}{cl|cl|cl }
 	A & Adam   & O & Olof    & 1 & Ett        \\
 	B & Bertil & P & Petter  & 2 & Tvåa       \\
@@ -118,11 +123,13 @@ I de tidigare SMnXYZ-signalerna förekom amatörens bokstavskombination endast e
 	N & Niklas & Ä & Ärlig   & + & Plus       \\
 	  &        & Ö & Östen   &   & Mellanslag \\
 \end{longtable}
-\end{center}
+\caption{Svenska bokstaveringsalfabetet}
+\end{table}
 
 \subsection{Bokstaveringsalfabetet (Internationella)}
-\begin{center}
-\begin{longtable}{cl|cl|cl}
+\begin{table}[H]
+\centering
+\begin{tabular}{cl|cl|cl}
 	A & Alfa     &  P   & Papa       & 0 & Zero    \\
 	B & Bravo    &  Q   & Quebec     & 1 & One     \\
 	C & Charlie  &  R   & Romeo      & 2 & Two     \\
@@ -138,8 +145,9 @@ I de tidigare SMnXYZ-signalerna förekom amatörens bokstavskombination endast e
 	M & Mike     & Ä/AE & Alfa-Echo  & - & Minus   \\
 	N & November & Ö/OE & Oscar-Echo & + & Plus    \\
 	O & Oscar    &      &            &   & Space   \\
-\end{longtable}
-\end{center}
+\end{tabular}
+\caption{Internationella bokstaveringsalfabetet (ITU-alfabetet)}
+\end{table}
 
 \subsection{Q-koder}
 \begin{longtable}{ll}
@@ -306,13 +314,15 @@ Olika modulationer upptar olika bandbredd. Detta är mycket viktigt att förstå
 	\textbf{Modulation} & \textbf{Bandbredd} & \textbf{Kommentarer}                  \\ \hline
 	CW                  &          $<$500 Hz & Smalbandigt                           \\
 	AM                  &              6 kHz & Amplitudmodulering med fullt sidband  \\
-	SSB*                &              3 kHz & Amplitudmodulering med enkelt sidband \\
+	SSB*                &              <3 kHz & Amplitudmodulering med enkelt sidband \\
 	NFM                 &           7-12 kHz & Smalbandig FM                         \\
 	FM                  &             16 kHz & Normal FM                             \\
 	WFM                 &          16-75 kHz & Bredbandig FM (t.ex. rundradio)
 \end{tabular}
 
 *) För SSB gäller att USB och LSB fungerar lite olika. När man beräknar den högsta eller lägsta frekvensen utgår man från den inställda frekvensen $f$. För USB gäller då att högsta frekvensen är $f+3$\,kHz. För LSB blir det $f-3$\,kHz. Detta innebär att om du sänder på 80\,m-bandet och du får sända telefoni från 3600--3800\,kHz och vill lägga dig i under bandkanten och köra LSB skall du ställa in din radio på 3603\,kHz som lägsta frekvens. Använd gärna lite marginal och kör exempelvis 3605\,kHz i stället.
+
+Den egentliga modulationsfrekvensen är dock lite mer komplicerad. Normalt anges den verkliga modulationsfrekvensen som ca 2,7\,kHz och det beror på att man i regel filtrerar bort ljudet under 300\,Hz och det över 3000\,Hz. Detta innebär att det akustiska frekvensomfånget blir 300--3000\,Hz och därmed upptar signalen inte mer än 2,7\,kHz.
 
 Det är vanligt att man märker stationer som kör överdriven bandbredd. Antingen som en följd av att man vill öka sin modulationsvinst, okunskap eller man har skruvat i sin radio. Syftet kan var att få bättre genomslag vid långväga förbindelser.
 
@@ -328,7 +338,7 @@ Bandbredden hos CW består av fasbruset vilket normalt är så undertryckt att d
 
 Amplitudmodulering finns i flera olika varianter. Vanlig AM består av en bärvåg vars styra varieras i takt med signalen som skall sändas. Denna förändring av bärvågen producerar sidband och det är i dessa som den egentliga informationen återfinns. Bärvågen i sig får dock lejonparten av signalen varför det är en sändningsklass som nästan aldrig används inom amatörradiobanden.
 
-Bandbredden hos AM-modulerad signal kan beräknas genom att man tar två gånger högsta modulationsfrekvensen. Detta ger t.ex. vid en modulationsfrekvens som går från 300-3000\,Hz en bandbredd som varierar med talet från 600 Hz -- 6 kHz.
+Bandbredden hos AM-modulerad signal kan beräknas genom att man tar två gånger högsta modulationsfrekvensen. Detta ger t.ex. vid en modulationsfrekvens som går från 300-3000\,Hz en bandbredd som varierar med talet från upp till 6\,kHz.
 
 $$B=2f_m$$
 
