Böt språk för felrättning

--- a/rhb-print-A4.tex
+++ b/rhb-print-A4.tex
@@ -1,5 +1,5 @@
 % !TeX encoding = UTF-8
-% !TeX spellcheck = sv_SE
+% !TeX spellcheck = en_US
 \documentclass[10pt,swedish,a4paper]{article}
 \usepackage[a4paper,bindingoffset=1cm]{geometry}
 \usepackage[utf8]{inputenc}
