--- a/body.tex
+++ b/body.tex
@@ -523,11 +523,30 @@ UKV            & Ultrakortvåg  & 88--108                     & MHz \\
 
 För radioamatörer delar man in frekvensbanden i långvåg, mellanvåg, kortvåg, VHF, UHF och SHF beroende på frekvens, se tabellen under avsnitt \ref{frekvens-vaglangd}. Dessa har lite olika utbredningsegenskaper.
 
-\textbf{Långvåg} -- Markvågsutbredning, relativt höga sändareffekter, tillförlitliga för\-bind\-el\-ser men i övre delen av frekvensbandet kortare förbindelser dagtid. På de lägsta frekvenserna erhålls med hög sändareffekt goda förbindelser på stora avstånd globalt och används även för t.ex. malmprospektering, kommunikation med ubåtar i undervattensläge.
+\subsubsection{Långvåg}
 
-\textbf{Kortvåg} -- God rymdvågsutbredning med mycket lång räckvidd redan med låg effekt men samtidigt starkt avhängigt radiokonditionerna. Med ökande frekvens blir jonosfärreflektionen allt flackare vilket resulterar i en alltmer uttalad död zon (skip). Särskilt utmärkande för kortvågen är att den redan med låg effekt ger under gynnsamma konditioner extremt lång räckvidd via rymdvåg, ibland globalt.
+Markvågsutbredning, relativt höga sändareffekter, tillförlitliga för\-bind\-el\-ser men i övre delen av frekvensbandet kortare förbindelser dagtid. På de lägsta frekvenserna erhålls med hög sändareffekt goda förbindelser på stora avstånd globalt och används även för t.ex. malmprospektering, kommunikation med ubåtar i undervattensläge.
 
-\textbf{Mellanvåg} -- Kombinerar egenskaperna hos angränsande delar av lång- och kortvåg, kan ge kraftig interferens mellan rymd- och markvåg som ofta upplevs som kraftig fädning. Särskilt utmärkande för mellanvågen är den i det närmaste avsaknanden av skipzon eftersom mark- och rymdvåg kompletterar varandra, jonosfärens D-skikt är heller inte särskilt uttalat i frekvensområdet dvs förbindelser via rymdvåg på korta avstånd mellan 100--300\,km är möjliga även dagtid under perioder med kraftig solaktivitet.
+\subsubsection{Kortvåg}
 
-\textbf{Ultrakortvåg (VHF)} -- Förbindeleser med låg effekt och små antenner, oberoende av jonosfären men då endast i form av frirumsutbredning, dvs fram till horisonten och under påverkan av terränghinder mm. Särskilt utmärkande för UKV är att rymdvåg saknar, markvågsdämpningen till lands är total och kommunikation på högre frekvenser i princip därför bara sker vid fri sikt mellan sändare och mottagare.
+God rymdvågsutbredning med mycket lång räckvidd redan med låg effekt men samtidigt starkt avhängigt radiokonditionerna. Med ökande frekvens blir jonosfärreflektionen allt flackare vilket resulterar i en alltmer uttalad död zon (skip). Särskilt utmärkande för kortvågen är att den redan med låg effekt ger under gynnsamma konditioner extremt lång räckvidd via rymdvåg, ibland globalt.
 
+\subsubsection{Mellanvåg}
+
+Kombinerar egenskaperna hos angränsande delar av lång- och kortvåg, kan ge kraftig interferens mellan rymd- och markvåg som ofta upplevs som kraftig fädning. Särskilt utmärkande för mellanvågen är den i det närmaste avsaknanden av skipzon eftersom mark- och rymdvåg kompletterar varandra, jonosfärens D-skikt är heller inte särskilt uttalat i frekvensområdet dvs förbindelser via rymdvåg på korta avstånd mellan 100--300\,km är möjliga även dagtid under perioder med kraftig solaktivitet.
+
+\subsubsection{Ultrakortvåg, väldigt hög frekvens (VHF)}
+
+Förbindeleser med låg effekt och små antenner, oberoende av jonosfären men då endast i form av frirumsutbredning, dvs fram till horisonten och under påverkan av terränghinder mm. Särskilt utmärkande för UKV är att rymdvåg saknar, markvågsdämpningen till lands är total och kommunikation på högre frekvenser i princip därför bara sker vid fri sikt mellan sändare och mottagare.
+
+Eftersom signalerna kan passera jonosfären fungerar det att kommunicera med satelliter och rymdstationer på frekvenserna över ca 100\,MHz. Amatörradiobandet på 144--146\,MHz (2-metersbandet) har en avdelning frekvenser vikta för rymdkommunikaton.
+
+\subsubsection{Ultrahög frekvens (UHF)}
+
+Bandet är ett av de mest populära för landmobil radio. I dag rymms i detta band mellan 300--3000\,MHz näranog all landmobil professionell kommunikation då mycket har lämnat VHF-bandet till förmån för 400\,MHz-bandet. I skrivande stund ryms även alla mobiltelefoniband inom UHF, det gäller 700, 800, 900, 1800, 2100 och 2600. I framtiden kan det komma frekvensband som ligger högre, exempelvis 3,5\,GHz eller 5\,GHz.
+
+Bandet är utmärkt för kommunikation mellan fordon, särskilt i urban miljö fungerar den kortare våglängden bra. Den reflekteras också bättre mellan husen och frekvenser på främst 400\,MHz har en fantastisk förmåga att leta sig in fast man befinner sig i radioskugga. Tillsammans med 6-meter, 4-meter och 2-meter i glesbygden fyller 70\,cm-bandet en nisch för landmobil kommunikation som få andra frekvenser fungerar.
+
+Radioamatörer har också ett av sina större tilldelningar i detta band, mellan 432--438\,MHz. Här finns också en LPD\footnote{Low Power Devices, små radiostyrningsutrustningar, t.ex. väderstationer, garageportsöppnare med mera.}-del som vi får samsas med. Främst kör man FM på bandet men det förekommer SSB och kanske ibland också CW. Det finns ett stort repeaterband med 2\,MHz shift mellan mottagare och sändare och det är ett praktiskt band för man kan enkelt bygga antenner med ganska rejält med förstärkning.
+
+Det är också ett populärt band för satellitkommunikation.
