CTCSS-tabell fixad

--- a/body.tex
+++ b/body.tex
@@ -473,6 +473,8 @@ Inom amatörradio används ofta pilottoner (subtoner) som CTCSS\footnote{Contnuo
 
 Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS för att hindra att störningar uppkommer vid conds mm. Det ger också möjligheten för sändaramatörer att öppna just den repeater man önskar om man har flera på samma frekvens omkring sig.
 
+\begin{table}[h]
+\centering
 \begin{tabular}{lcccc}
 	\textbf{Område}    & \textbf{Primär} & \textbf{Sek. 1} & \textbf{Sek. 2} & \textbf{Sek. 3} \\ \hline
 	Distrikt 0         & 77,0            & 123.0           & 67.0            & 100.0           \\
@@ -485,6 +487,8 @@ Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS fö
 	Distrikt 6         & 114.8           & 118,8           & 94.8            & 131.8           \\
 	Distrikt 7         & 79.7            & 156.7           & 210.7           & 
 \end{tabular}
+\caption{Distrikt och CTCSS-toner}
+\end{table}
 
 Lägg märke till att decimalsiffran är i de flesta fall samma som distriktssiffran.
 
