--- a/body-vhf.tex
+++ b/body-vhf.tex
@@ -19,7 +19,11 @@ Kanal 24 har dock tidigare haft en frekvens som inte längre är i bruk, så det
 Nya kanaler är markerade i listan med asterisk och har fått nummer från kanal 25 och uppåt efter frekvens. Detta gör att listan blir en smula oordnad.
 
 \begin{longtable}{rll|rll}
+	\caption{Jaktfrekvenser 31\,MHz tabell}\\
 	\textbf{Frekvens} & \textbf{Benämning} & \textbf{Tidigare} & \textbf{Frekvens} & \textbf{Benämning} & \textbf{Tidigare} \\ \hline
+		\endfirsthead
+	\textbf{Frekvens} & \textbf{Benämning} & \textbf{Tidigare} & \textbf{Frekvens} & \textbf{Benämning} & \textbf{Tidigare} \\ \hline
+	\endhead
 	           30,930 & Jakt 1             &                   &   31,180          &   Jakt 14          &                   \\
 	           30,940 & Jakt 25*           &                   &   31,190          &   Jakt 15          &                   \\
 	           30,950 & Jakt 26*           &                   &   31,200          &   Jakt 16          &                   \\
