--- a/body-hf.tex
+++ b/body-hf.tex
@@ -35,10 +35,12 @@ OBS! Detta är inte fullständigt radioreglemente naturligtvis utan endast samma
 
 Scouterna har frekvenser på HF likväl som VHF/UHF som de aktiverar vid särskilda tillfällen ofta i tillsammans med en lokal amatörradioklubb eller vanliga amtörradioeldsjälar som inte sällan också är scouter. Här kommer en lista på frekvenser som är vanligt förekommande i scoutsammanhang.
 
+\begin{table}[H]
+\centering
 \begin{tabular}{rrll}
 	\textbf{Band} & \textbf{Frekvens} & \textbf{Trafik} & \textbf{Not} \\ \hline
 
-                   80 & 3 570  & CW  &             \\
+               80 & 3 570  & CW  &             \\
 	              & 3 940  & SSB & Ej region 2 \\
 	              & 3 690  & SSB &             \\ \hline
 	           40 & 7 030  & CW  &             \\
@@ -57,6 +59,8 @@ Scouterna har frekvenser på HF likväl som VHF/UHF som de aktiverar vid särski
 	            6 & 10 160 & CW  &             \\
 	              & 50 160 & SSB &             \\ \hline
 \end{tabular}
+\caption{Scouters JOTA-frekvenser på HF}
+\end{table}
 
 Normalt aktiveras dessa frekvenser tredje veckoslutet i oktober varje år, fredag till söndag. Då kan det vara många klubbar som finns på frekvenserna och det är också vanligt att man hör dem på helt andra frekvenser. De frekvenser som listas här är inte på något vis de endra frekvenser som scouter använder.
 
@@ -114,14 +118,13 @@ G &       &       &       &        & 16 546 & 18 843 & 22 177 & 25 118 \\
 
 \subsubsection{IBP -- International Beacon Project}
 
-Det finns flera olika typer av fyrar men för HF är IBP (International Beacon Project) intressant eftersom det ger operatören möjlighet att utröna hur utbredningen ser ut för stunden genom att lyssna efter fyrar. 
-
-Fyrarna har gemensam hårdvara och synkroniseras mot tidsreferens. Fyrar kan vara offline av olika skäl, kontrollera mot IBP:s hemsida om du inte hör en fyr du brukar höra, den kan vara off line.
+Det finns flera olika typer av fyrar men för HF är IBP (International Beacon Project) intressant eftersom det ger operatören möjlighet att utröna hur utbredningen ser ut för stunden genom att lyssna efter fyrar. Fyrarna har gemensam hårdvara och synkroniseras mot tidsreferens. Fyrar kan vara offline av olika skäl, kontrollera mot IBP:s hemsida om du inte hör en fyr du brukar höra.
 
 Tabellen nedan visar anropssignaler och första sändningsslotten som fyren sänder, dvs SCHED för olika fyrar och frekvenser.
 
 \subsubsection{Lista över IBP-fyrar}
-\small
+\begin{table}[H]
+\centering
 \begin{tabular}{llrrrrr}
 \textbf{Signal} & \textbf{QTH} & \textbf{14 100} & \textbf{18 110} & \textbf{21 150} & \textbf{24 930} & \textbf{28 200} \\ \hline
 
@@ -144,6 +147,8 @@ LU4AA  & Argentina      & 02:30  & 02:40  & 02:50  & 00:00  & 00:10  \\
 OA4B   & Peru           & 02:40  & 02:50  & 00:00  & 00:10  & 00:20  \\
 YV5B   & Venezuela      & 02:50  & 00:00  & 00:10  & 00:20  & 00:30  \\
 \end{tabular}
+\caption{IBP-fyrar}
+\end{table}
 
 \normalsize
 
